add offer, offer repo, interface offer, interface offer repo, folders added

--- a/Trunk/WpfApplication1/Guis/BusinessProcesses/Sales/Offer/Offer.xaml
+++ b/Trunk/WpfApplication1/Guis/BusinessProcesses/Sales/Offer/Offer.xaml
@@ -64,7 +64,7 @@
         <TextBox 
           x:Name="customerNumberTxt"
           Grid.Row="2" Grid.Column="2" 
-          Text="{Binding Path=CustomerNumber, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
+          Text="{Binding Path=OfferCustomer, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
           Validation.ErrorTemplate="{x:Null}"
           />
         <ContentPresenter 
