--- a/Trunk/WpfApplication1/MainWindowResources.xaml
+++ b/Trunk/WpfApplication1/MainWindowResources.xaml
@@ -11,9 +11,14 @@
                     xmlns:Product="clr-namespace:WpfApplication1.Guis.Stammdaten.Product"
                     xmlns:Supplier="clr-namespace:WpfApplication1.ViewModel.Stammdaten.Supplier"
                     xmlns:SupplierGui="clr-namespace:WpfApplication1.Guis.Stammdaten.Supplier"
+                    xmlns:Offer="clr-namespace:WpfApplication1.Guis.BusinessProcesses.Sales.Offer"
+                    xmlns:OfferVm="clr-namespace:WpfApplication1.ViewModel.BusinessProcesses.Sales.Offer"
                     x:Class="FrontEnd.c__projekte_projectmerp_wpfapplication1_mainwindowresources_xaml">
     
     
+    <DataTemplate DataType="{x:Type OfferVm:OfferViewModel}">
+        <Offer:Offer/>
+    </DataTemplate>
     <DataTemplate DataType="{x:Type vmCustomer:AllCustomersViewModel}" >
         <CustomerGui:AllCustomersView />
     </DataTemplate>
@@ -36,7 +41,7 @@
         <SupplierGui:SuppliersView />
     </DataTemplate>
     
-<!---->
+    <!---->
    
     <!-- Template für die Befehle / Hyperlinks im Navigationsbereich -->
     <DataTemplate x:Key="CommandsTemplate" >
