--- a/Trunk/WpfApplication1/MainWindowResources.xaml
+++ b/Trunk/WpfApplication1/MainWindowResources.xaml
@@ -13,9 +13,14 @@
                     xmlns:SupplierGui="clr-namespace:WpfApplication1.Guis.Stammdaten.Supplier"
                     xmlns:Offer="clr-namespace:WpfApplication1.Guis.BusinessProcesses.Sales.Offer"
                     xmlns:OfferVm="clr-namespace:WpfApplication1.ViewModel.BusinessProcesses.Sales.Offer"
+                    xmlns:Distribution="clr-namespace:WpfApplication1.Guis.BusinessProcesses.Distribution"
+                    xmlns:DistributionVm="clr-namespace:WpfApplication1.ViewModel.BusinessProcesses.Distribution"
                     x:Class="FrontEnd.c__projekte_projectmerp_wpfapplication1_mainwindowresources_xaml">
-    
-    
+
+
+    <DataTemplate DataType="{x:Type DistributionVm:DistributionViewModel}">
+        <Distribution:Distribution />
+    </DataTemplate>
     <DataTemplate DataType="{x:Type OfferVm:OfferViewModel}">
         <Offer:Offer/>
     </DataTemplate>
