--- a/Trunk/WpfApplication1/MainWindowResources.xaml
+++ b/Trunk/WpfApplication1/MainWindowResources.xaml
@@ -17,22 +17,22 @@
                     xmlns:OfferVm="clr-namespace:WpfApplication1.ViewModel.BusinessProcesses.Sales.Offer"
                     xmlns:Distribution="clr-namespace:WpfApplication1.Guis.BusinessProcesses.Distribution"
                     xmlns:DistributionVm="clr-namespace:WpfApplication1.ViewModel.BusinessProcesses.Distribution"
-                    xmlns:PurchaseHeader="clr-namespace:WpfApplication1.Guis.BusinessProcesses.Purchase"
+                    xmlns:Purchase="clr-namespace:WpfApplication1.Guis.BusinessProcesses.Purchase"
                     xmlns:PurchaseHeaderVm="clr-namespace:WpfApplication1.ViewModel.BusinessProcesses.Purchase"
                     x:Class="FrontEnd.c__projekte_projectmerp_wpfapplication1_mainwindowresources_xaml">
 
-    
-    <DataTemplate DataType="{x:Type OrderVM:OrderViewModel}">
-        <OrderGui:OrdersView/>
+
+    <DataTemplate DataType="{x:Type PurchaseHeaderVm:PurchaseHeaderViewModel}" >
+        <Purchase:PurchaseHeader />
     </DataTemplate>
-    <DataTemplate DataType="{x:Type PurchaseHeaderVm:PurchaseHeaderViewModel}">
-        <PurchaseHeader:PurchaseHeader />
-    </DataTemplate>
-    <DataTemplate DataType="{x:Type DistributionVm:DistributionViewModel}">
+    <DataTemplate DataType="{x:Type DistributionVm:DistributionViewModel}" >
         <Distribution:Distribution />
     </DataTemplate>
-    <DataTemplate DataType="{x:Type OfferVm:OfferViewModel}">
-        <Offer:Offer/>
+    <DataTemplate DataType="{x:Type OfferVm:OfferViewModel}" >
+        <Offer:Offer />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type OrderVM:OrderViewModel}">
+        <OrderGui:OrdersView/>
     </DataTemplate>
     <DataTemplate DataType="{x:Type vmCustomer:AllCustomersViewModel}" >
         <CustomerGui:AllCustomersView />
